[VEUE-685] fix scroll issue on IPhone

--- a/app/javascript/style/chat.scss
+++ b/app/javascript/style/chat.scss
@@ -22,8 +22,14 @@
     height: 0;
     word-break: break-word;
     overflow-wrap: break-word;
-    &::-webkit-scrollbar-track {
-      background: color.$white;
+
+    .simplebar-content-wrapper {
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+    .simplebar-scrollbar::before {
+      width: 3px;
     }
     .messages {
       min-height: 95%; // This keeps the messages taking up some space so that the first message is below
